--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,7 @@
   </script>
   <%= csrf_meta_tag %>
 </head>
-<body id="<%= @body_id %>">
+<body<%= " body='#{@body_id}'" if @body_id %>>
 <div id="super_wrapper">
   <div id="header">
     <div class="center_page ">
