--- a/app/views/pages/howto.html.erb
+++ b/app/views/pages/howto.html.erb
@@ -5,10 +5,37 @@
 </div>
 <div class="content_container">
 <div class="page">
-
+<br/>
+<ul class="links">
+  <li><a href="#f1">Adding Smacks</a></li>
+  <li><a href="#f2">Adding Redemptions</a></li>
+  <li><a href="#f3">Importing Contacts</a>
+    <ul>
+      <li><a href="#f3a">Within the “Edit Profile” Settings</a></li>
+      <li><a href="#f3b">Through the "Send as Smack" Function</a></li>
+    </ul>
+  </li>
+  <li><a href="#f4">Managing Your Email Contacts</a>
+    <ul>
+      <li><a href="#f4a">Creating an Email Group</a></li>
+      <li><a href="#f4b">Removing a Contact From a Group</a></li>
+      <li><a href="#f4c">Adding a New Contact</a></li>
+      <li><a href="#f4d">Deleting a Contact</a></li>
+      <li><a href="#f4e">Editing a Contact</a></li>
+    </ul>
+  </li>
+  <li><a href="#f5">Sharing Content</a>
+    <ul>
+      <li><a href="#f5a">Send as Smack</a></li>
+      <li><a href="#f5b">Email Share</a></li>
+      <li><a href="#f5c">Facebook Share</a></li>
+      <li><a href="#f5d">Twitter Share</a></li>
+    </ul>
+  </li>
+</ul>
 <ul>
 <li>
-  <h3>Adding Smacks</h3>
+  <h3><a name="f1"></a>Adding Smacks</h3>
   <ol start="1" type="1">
     <li>Sign in to your Campusmack account.</li>
     <li>Using the side navigation bar, hover over the conference of the team you wish to Smack. Click on the
@@ -30,7 +57,7 @@
   </ol>
 </li>
 <li>
-  <h3>Adding Redemptions</h3>
+  <h3><a name="f2"></a>Adding Redemptions</h3>
   <ol start="1" type="1">
     <li>Sign in to your Campusmack account.</li>
     <li>Using the side navigation bar, hover over the conference of the team you wish to add a Redemption to.
@@ -54,11 +81,11 @@
   </ol>
 
 </li>
-<li><h3>Importing Contacts</h3>
+<li><h3><a name="f3"></a>Importing Contacts</h3>
 
   <ul>
     <li>
-      <h4>Importing Contacts Within the “Edit Profile” Settings</h4>
+      <h4><a name="f3a"></a>Importing Contacts Within the “Edit Profile” Settings</h4>
       <ol start="1" type="1">
         <li>Once signed in to your account, click on the “Profile” link in the upper right hand corner of the
           website.
@@ -84,7 +111,7 @@
       </ol>
     </li>
     <li>
-      <h4>Importing Contacts Through the "Send as Smack" Function</h4>
+      <h4><a name="f3b"></a>Importing Contacts Through the "Send as Smack" Function</h4>
       <ol start="1" type="1">
         <li>Once signed in to your account, click on the <%= image_tag('about/send_as_smack_big.jpg') %> button on
           any Campusmack post.
@@ -107,11 +134,11 @@
   </ul>
 
 </li>
-<li><h3>Managing Your Email Contacts</h3>
+<li><h3><a name="f4"></a>Managing Your Email Contacts</h3>
 
   <ul>
     <li>
-      <h4>Creating an Email Group</h4>
+      <h4><a name="f4a"></a>Creating an Email Group</h4>
       <ol start="1" type="1">
         <li>Once signed in to your account, click on the “Profile” link in the upper right hand corner of the
           website.
@@ -129,7 +156,7 @@
       </ol>
     </li>
     <li>
-      <h4>Removing a Contact From a Group</h4>
+      <h4><a name="f4b"></a>Removing a Contact From a Group</h4>
       <ol start="1" type="1">
         <li>Once you've added an email group, it will show up in a menu to the left of your list of contacts. To
           remove a contact from a group, click on the group you wish to remove that contact from. The site will
@@ -142,7 +169,7 @@
       </ol>
     </li>
     <li>
-      <h4>Adding a New Contact</h4>
+      <h4><a name="f4c"></a>Adding a New Contact</h4>
       <ol start="1" type="1">
         <li>Click on the <%= image_tag('about/new_contact.jpg') %> button in the top right hand side of the
           "Contacts" page.
@@ -151,7 +178,7 @@
       </ol>
     </li>
     <li>
-      <h4>Deleting a Contact</h4>
+      <h4><a name="f4d"></a>Deleting a Contact</h4>
       <ol start="1" type="1">
         <li>Click on the check box next to the contact you wish to delete (you can select multiple contacts to
           delete) and then click the <%= image_tag('about/delete_selected.jpg') %> button above the list of
@@ -163,7 +190,7 @@
       </ol>
     </li>
     <li>
-      <h4>Editing a Contact</h4>
+      <h4><a name="f4e"></a>Editing a Contact</h4>
       <ol start="1" type="1">
         <li>Click on the <%= image_tag('about/edit.jpg') %> button to the right of the contact that you want to
           change. This will bring up a pop up box with that contact's name and email address.
@@ -174,11 +201,11 @@
   </ul>
 
 </li>
-<li><h3>Sharing Content</h3>
+<li><h3>Sharing Content<a name="f5"></a></h3>
 
   <ul>
     <li>
-      <h4>Send as Smack</h4>
+      <h4><a name="f5a"></a>Send as Smack</h4>
       <ol start="1" type="1">
         <li>Once you find a post you want to send_as_mack talk, click
           the <%= image_tag('about/send_as_smack_big.jpg') %> button. You will be routed to a landing page to
@@ -196,7 +223,7 @@
       </ol>
     </li>
     <li>
-      <h4>Email Share</h4>
+      <h4><a name="f5b"></a>Email Share</h4>
       <ol start="1" type="1">
         <li>Once you find a post you want to share with your friends through email, click
           the <%= image_tag('about/email_share.jpg') %> icon. You will be routed to a landing page to compose the
@@ -213,7 +240,7 @@
       </ol>
     </li>
     <li>
-      <h4>Facebook Share</h4>
+      <h4><a name="f5c"></a>Facebook Share</h4>
       <ol start="1" type="1">
         <li>If you find a post you want to share with your friends through Facebook, click
           the <%= image_tag('about/facebook_share.jpg') %> icon.
@@ -224,7 +251,7 @@
       </ol>
     </li>
     <li>
-      <h4>Twitter Share</h4>
+      <h4><a name="f5d"></a>Twitter Share</h4>
       <ol start="1" type="1">
         <li>If you find a post you want to share with your friends through Twitter, click
           the <%= image_tag('about/twitter_share.jpg') %> icon.
