--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -93,6 +93,9 @@
         <%= will_paginate(@comments) %>
         <div class="comments_container">
           <%= render :partial => @post.comments.sort_by { |c| c.created_at }.reverse %>
+          <% unless current_user %>
+            <p class="comment_auth_message">You must be signed in to comment. <%=link_to "Sign in", sign_in_path %> or <%= link_to "Create an Account", sign_up_path %>.</p>
+          <% end %>
         </div>
       </div>
       <%= render 'shared/report_form' %>
