fixed Statistics page

--- a/app/views/conferences/_statistics.html.erb
+++ b/app/views/conferences/_statistics.html.erb
@@ -9,7 +9,7 @@
 
     <% conference.colleges.limit(limit).order('smacks_count desc').each do |college| %>
       <tr class="<%= cycle("even", "odd") %>">
-        <td><%= link_to college.name.split.first, college %></td>
+        <td><%= link_to college.name, college %></td>
         <td class="smack"><%= college.smacks_count %></td>
         <td class="redemp"><%= college.redemptions_count %></td>
       </tr>
