closes #39, closes #40, closes #41, closes #31, closes #9, closes #43

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -17,7 +17,7 @@
       <span class="time"><%= comment.created_at.strftime("%H:%M") %></span>
     </div>
     <div class="comment_text">
-      <%= censored_text(comment.comment) %>
+      <%= censoring(comment.comment) %>
     </div>
   </div>
 </div>
