--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
   <%= favicon_link_tag %>
 
   <%= javascript_include_tag :defaults %>
-  <%= javascript_include_tag 'rails.validations', 'twipsy', '/javascripts/fancybox/jquery.fancybox-1.3.4.pack.js', 'jquery.toastmessage.js', 'jquery.tokeninput.js' %>
+  <%= javascript_include_tag 'rails.validations','rails.validations.custom','twipsy', '/javascripts/fancybox/jquery.fancybox-1.3.4.pack.js', 'jquery.toastmessage.js', 'jquery.tokeninput.js' %>
 
   <%= stylesheet_link_tag 'reset', 'style', 'user', 'contacts', 'token-input-facebook', 'twipsy', 'utility_components', 'facebox', 'jquery.fancybox-1.3.4.css', 'jquery.toastmessage.css' %>
   <%= javascript_include_tag "facebox", 'stat_slider', 'swfobject' %>
