--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -1,7 +1,7 @@
 <ul>
 <tr>
 	<td class ="micropost">
-		<span class="content"><%= micropost.content %></span>
+		<span class="content"><%= censoring(micropost.content) %></span>
 		<span class="timestamp">
 			Posted <%= time_ago_in_words(micropost.created_at) %> ago.
 			</span>
