--- a/app/views/posts/_news_preview.html.erb
+++ b/app/views/posts/_news_preview.html.erb
@@ -1,8 +1,8 @@
 <li class="team-item">
 	<div class="summary">
-    <%= link_to truncate(post.title, :length => 80), [post.postable, post] %>
+    <%= link_to censoring(truncate(post.title, :length => 80)), [post.postable, post] %>
   </div>
-  <h3><%= link_to "Article Preview", post.news_post.url, :class => 'snap_shots' %></h3>
+  <%= link_to "Article Preview", post.news_post.url, :class => 'snap_shots' %>
   <%= share_icons(post, :preview) %>
   <div class="votes">
     <%= link_to(image_tag('like.png'), vote_up_post_path(post), :method => :post, :remote => true, :class => "vote-up") if can? :create, Vote %>
