--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,14 +1,26 @@
+<% open_graph_meta_tags({ "og:title" => "#{SITE_NAME}",
+    "og:type" => "movie",
+    "og:url" => "#{@youtube_video.url if @youtube_video}",
+    "og:site_name" => "#{SITE_NAME}",
+    "og:description" => " #{@post.title} <br/> #{@post.summary} ",
+    "og:image" => " #{@youtube_video.thumbnail_small if @youtube_video}",
+    "og:video:type" => "application/x-shockwave-flash",
+    "og:video:height" => "398",
+    "og:video:width" => "224",
+    "og:video" => "http://www.youtube.com/v/#{@youtube_video.video_id if @youtube_video}"
+  }) -%>
+
 <div class="content new_level with_submenu clearfix">
   <div class="content_actions">
     <ul>
       <% if can? :report, @post %>
         <li class="dark_button">
-          <%= link_to('Report Post', report_post_path(@post), :class => 'button postreport', :id => "post_rep_#{@post.id}") %>
+          <%= link_to('Report Post', report_post_path(@post), :class => 'button postreport', :remote => true, :id => "post_rep_#{@post.id}") %>
         </li>
       <% end %>
     </ul>
   </div>
-  <div class="content_title"><%= @post.title %></div>
+  <div class="content_title"><%= censoring(@post.title) %></div>
   <div class="content_container">
     <div class="content_category">
       <div class="smack_container clearfix">
@@ -63,7 +75,7 @@
         <% if @post.photo || @post.news_post || @post.video %>
           </div>
         <% end %>
-        <div class="summary"><%= @post.summary %>
+        <div class="summary"><%= censoring(@post.summary) %>
           <% if @post.summary && params[:action] != 'show' %>
             <%= link_to " [more...]", [@parent, @post] %>
           <% end %>
@@ -86,7 +98,6 @@
           <% end %>
         </div>
       </div>
-      <%= render 'shared/report_form' %>
     </div>
   </div>
 </div>
