--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,17 +4,12 @@
 /* CSS Document */
 
 @font-face {
-    font-family: 'Conv_MyriadPro-BoldCond';
-    src: url('/fonts/MyriadPro-BoldCond.eot');
-    src: local('☺'),
-         url('/fonts/MyriadPro-BoldCond.eot?') format('embedded-opentype'),
-         url('/fonts/MyriadPro-BoldCond.woff') format('woff'),
-         url('/fonts/MyriadPro-BoldCond.ttf') format('truetype'),
-         url('/fonts/MyriadPro-BoldCond.svg') format('svg');
-    font-weight: normal;
-    font-style: normal;
+  font-family: 'Conv_MyriadPro-BoldCond';
+  src: url('/fonts/MyriadPro-BoldCond.eot');
+  src: local('☺'), url('/fonts/MyriadPro-BoldCond.eot?') format('embedded-opentype'), url('/fonts/MyriadPro-BoldCond.woff') format('woff'), url('/fonts/MyriadPro-BoldCond.ttf') format('truetype'), url('/fonts/MyriadPro-BoldCond.svg') format('svg');
+  font-weight: normal;
+  font-style: normal;
 }
-
 
 /* Need to place footer on bottom of the page */
 html, body, #super_wrapper {
@@ -35,10 +30,10 @@ body {
 }
 
 .ajax_loader {
-    text-align: center;
-    width: 100%;
-    height: 100%;
-    border-top: 0!important;
+  text-align: center;
+  width: 100%;
+  height: 100%;
+  border-top: 0 !important;
 }
 
 .ajax_loader {
@@ -286,6 +281,7 @@ a.sign_up:visited {
   overflow: hidden;
   width: 171px;
 }
+
 #conference_column .top_submenu ul {
   width: 175px;
 }
@@ -849,6 +845,7 @@ ul.news li {
   text-transform: uppercase;
   margin-top: 1px;
 }
+
 .comment .actions .report_abuse:hover {
   color: #fff;
   background: #30A0F0;
@@ -1244,7 +1241,6 @@ to keep footer on the bottom of page.
   background-repeat: no-repeat;
 }
 
-
 .with_submenu.active > a:hover,
 .with_submenu.active ul li.active a:hover {
   background: transparent !important;
@@ -1407,95 +1403,8 @@ ul.no-bullets {
   display: none;
 }
 
-#osx-modal-content, #osx-modal-data {
-  display: none;
-}
-
-/* Overlay */
-#osx-overlay {
-  background-color: #000;
-  cursor: wait;
-}
-
-/* Container */
-#osx-container {
-  background-color: #eee;
-  color: #000;
-  font: 16px/24px "Lucida Grande", Arial, sans-serif;
-  padding-bottom: 4px;
-  width: 300px;
-  -moz-border-radius-bottomleft: 6px;
-  -webkit-border-bottom-left-radius: 6px;
-  -moz-border-radius-bottomright: 6px;
-  -webkit-border-bottom-right-radius: 6px;
-  border-radius: 0 0 6px 6px;
-  -moz-box-shadow: 0 0 64px #000;
-  -webkit-box-shadow: 0 0 64px #000;
-  box-shadow: 0 0 64px #000;
-}
-
-#osx-container a {
-  color: #000;
-  text-decoration: underline !important;
-}
-
-#osx-container a.lbutton {
-  float: right;
-  text-decoration: none !important;
-}
-
-#osx-container input, #osx-container select {
-  font-size: 120%;
-}
-
 #report_other {
   width: 270px;
-}
-
-#osx-container #osx-modal-title {
-  color: #000;
-  background-color: #ddd;
-  border-bottom: 1px solid #ccc;
-  font-weight: bold;
-  padding: 6px 8px;
-  text-shadow: 0 1px 0 #f4f4f4;
-}
-
-#osx-container .close {
-  display: none;
-  position: absolute;
-  right: 0;
-  top: 0;
-}
-
-#osx-container .close a {
-  display: block;
-  color: #777;
-  font-weight: bold;
-  padding: 6px 12px 0;
-  text-decoration: none;
-  text-shadow: 0 1px 0 #f4f4f4;
-}
-
-#osx-container .close a:hover {
-  color: #000;
-}
-
-#osx-container #osx-modal-data {
-  font-size: 12px;
-  padding: 6px 12px;
-}
-
-#osx-container h2 {
-  margin: 10px 0 6px;
-}
-
-#osx-container p {
-  margin-bottom: 10px;
-}
-
-#osx-container span {
-  color: #777;
 }
 
 .standard {
@@ -1686,7 +1595,6 @@ form.semantic.left_align button, form.semantic.left_align .actions input, form.s
   float: left;
 }
 
-
 .fullstats .inbox_table {
   height: auto;
   width: auto;
@@ -1707,10 +1615,12 @@ ul.items {
 }
 
 .team-item {
-  margin-right: 20px;
   float: left;
-  list-style: none;
-  width: 158px;
+  list-style: none outside none;
+  margin-bottom: 20px;
+  margin-left: 8px;
+  margin-right: 8px;
+  width: 240px;
 }
 
 .team-item .item-top {
@@ -1719,17 +1629,17 @@ ul.items {
 }
 
 .team-item .item-top h3 {
-    font-size: 12px;
-    margin-bottom: 5px;
+  font-size: 12px;
+  margin-bottom: 5px;
 }
 
 .team-item .item-top h3 a:visited,
 .team-item .item-top h3 a:link {
-    color: #000;
+  color: #000;
 }
 
 .team-item .item-top h3 a:hover {
-    color: #30A0F0;
+  color: #30A0F0;
 }
 
 .team-item .dislike {
@@ -1899,8 +1809,8 @@ div.page {
 .page h2 {
   font-size: 25px;
   margin-top: 1em;
-  font-weight:bold;
-	border-bottom: 2px solid #D4D4D4;
+  font-weight: bold;
+  border-bottom: 2px solid #D4D4D4;
 }
 
 .page h3 {
@@ -1934,4 +1844,16 @@ div.page {
 
 .page a {
   text-decoration: underline;
+}
+
+.page a:hover {
+  color: #30A0F0;
+}
+
+#shifting_fields .description .field_with_errors, #shifting_fields .description label {
+  float: right;
+}
+
+#shifting_fields .entry .field_with_errors, #shifting_fields .entry small {
+  float: left;
 }
