--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -14,7 +14,7 @@
     <% end %>
   </div>
   <div class="title">
-    <%= link_to censoring(post.title), [post.postable, post] %>
+    <%= link_to post.title, [post.postable, post] %>
   </div>
   <div class="unit_info">
     Posted
@@ -24,7 +24,7 @@
   </div>
   <div class="description">
     <%= link_to "Article Preview", post.news_post.url, :class => 'snap_shots' unless post.news_post.blank? %>
-    <%= censoring(post.summary) %>
+    <%= post.summary %>
   </div>
   <div class="actions">
     <%= link_to(image_tag('like.png'), vote_up_post_path(post), :method => :post, :remote => true, :class => "vote-up") if can? :create, Vote %>
@@ -38,7 +38,7 @@
         <span class="divider_vert2">&nbsp;</span>
         <%= link_to('<img src="/images/edit_.png" alt="Edit" />'.html_safe, method("edit_#{post.postable_type.downcase}_#{post.type.downcase}_path").call(post.postable, post), :class => 'button') if can? :update, post %>
         <%= link_to('<img src="/images/delete_.png" alt="Delete" />'.html_safe, post, :method => :delete, :confirm => "Delete Post?", :class => 'button') if can? :destroy, post %>
-        <%= link_to('<img src="/images/report_.png" alt="Report" />'.html_safe, report_post_path(post), :class => 'button postreport', :remote => true, :id => "post_rep_#{post.id}") if can? :report, post %>
+        <%= link_to('<img src="/images/report_.png" alt="Report" />'.html_safe, report_post_path(post), :class => 'button postreport', :id => "post_rep_#{post.id}") if can? :report, post %>
     <% end %>
   </div>
 </div>
