Fixes long post title

--- a/app/views/users/registrations/_form.html.erb
+++ b/app/views/users/registrations/_form.html.erb
@@ -35,9 +35,13 @@
         <td class="entry">
           <table>
             <tr>
-              <td style="vertical-align: middle"><span class="affiliation_span"><%= f.select(:affiliation, User::AFFILIATION_OPTIONS, { :include_blank => true }, :class => 'affiliation') %></span></td>
+              <td style="vertical-align: middle">
+                <span class="affiliation_span"><%= f.select(:affiliation, User::AFFILIATION_OPTIONS, { :include_blank => true }, :class => 'affiliation') %></span>
+              </td>
               <td style="vertical-align: middle">&nbsp;of&nbsp;</td>
-              <td style="vertical-align: middle"><span><%= f.select(:college_id, College.find(:all, :order => "name ASC").collect { |a| [a.name, a.id] }, { :include_blank => true }, :class => 'college') %></span></td>
+              <td style="vertical-align: middle">
+                <span><%= f.select(:college_id, College.find(:all, :order => "name ASC").collect { |a| [a.name, a.id] }, { :include_blank => true }, :class => 'college') %></span>
+              </td>
             </tr>
           </table>
         </td>
@@ -59,11 +63,11 @@
 
       <% if session[:provider].nil? %>
         <tr>
-		  <% if f.object.new_record? %>
-          <td class="description"><%= f.label :password, "Password:" %></td>
-		  <% else %>
-		  <td class="description"><%= f.label :password, "New Password:" %></td>
-		  <% end %>
+          <% if f.object.new_record? %>
+            <td class="description"><%= f.label :password, "Password:" %></td>
+          <% else %>
+            <td class="description"><%= f.label :password, "New Password:" %></td>
+          <% end %>
           <td class="entry"><%= f.password_field :password, :validate =>{ :presence => f.object.new_record?, :confirmation => true } %></td>
           <% if f.object.new_record? %>
             <td class="star"><%= mark_required(resource, :password) %></td>
