--- a/app/views/posts/_small_preview.html.erb
+++ b/app/views/posts/_small_preview.html.erb
@@ -1,6 +1,6 @@
 <li class="team-item">
   <div class="item-top clearfix">
-    <h3><%= link_to truncate(post.title, :length => 24), post %></h3>
+    <h3><%= link_to truncate(post.title, :length => 24), post, :title => post.title %></h3>
     <div class="which-college">by: <%= link_to(post.user.try(:username), post.user, :class => :author) %></div>
     <div class="votes">
       <%= link_to(image_tag('like.png'), vote_up_post_path(post), :method => :post, :remote => true, :class => "vote-up") if can? :create, Vote %>
