--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
       $(function () {
           <% flash.each do |key, value| %>
           $().toastmessage('showToast', {
-              text     : "<%= value %>",
+              text     : "<%= value.html_safe %>",
               sticky   : <%= get_toast_sticky(key) %>,
               position : 'top-center',
               type     : "<%= get_toast_type(key) %>"
