--- a/app/views/user_mailer/share_post.html.erb
+++ b/app/views/user_mailer/share_post.html.erb
@@ -5,7 +5,7 @@
 </head>
 <body marginheight="0" topmargin="0" marginwidth="0" leftmargin="0" bgcolor="#e4e4e4" style="padding-top:0px;padding-right:0px;padding-bottom:0px;padding-left:0px;margin-top:0px;margin-right:0px;margin-bottom:0px;margin-left:0px;">
 <table cellspacing="0" border="0" cellpadding="0" width="100%" bgcolor="#e4e4e4">
-  <table cellspacing="0" border="0" cellpadding="0" width="600" bgcolor="#fff" align="center">
+  <table cellspacing="0" border="0" cellpadding="0" width="600" bgcolor="#ffffff" align="center">
     <tr valign="top">
       <td valign="top">
         <table cellspacing="0" cellpadding="0" border="0" width="600" align="center">
@@ -13,11 +13,11 @@
             <td bgcolor="#3a99e2">
               <table cellspacing="0" cellpadding="0" border="0" align="center" width="525">
                 <tr>
-                  <td height="24" color="#fff">
-                    <a href="#" style="font-family: Arial, sans-serif; font-size: 11px; color: #fff; text-decoration: none;"><%= @to %></a>
+                  <td height="24" color="#ffffff">
+                    <a href="#" style="font-family: Arial, sans-serif; font-size: 11px; color: #ffffff; text-decoration: none;"><%= @to %></a>
                   </td>
                   <td height="24" align="right" style="font-family: Arial, sans-serif;">
-                    <span style="font-size: 11px;">your email not loading properly?&nbsp;&nbsp;</span><a style="font-family: Arial, sans-serif; font-size: 11px; color: #fff;" href="#">View
+                    <span style="font-size: 11px;">your email not loading properly?&nbsp;&nbsp;</span><a style="font-family: Arial, sans-serif; font-size: 11px; color: #ffffff;" href="#">View
                     it in your browser</a></td>
                 </tr>
               </table>
@@ -46,7 +46,7 @@
               <table width="525" cellspacing="0" cellpadding="0" border="0">
                 <tr>
                   <td>
-                    <h1 style="font-family: Arial, sans-serif; font-size: 24px; font-weight: normal; margin: 0 0 20px"><%= link_to @post.title, polymorphic_url([@post.postable, @post]) %></h1>
+                    <h1 style="font-family: Arial, sans-serif; font-size: 24px; font-weight: normal; margin: 0 0 20px"><%= link_to @post.title, polymorphic_url([@post.postable, @post]), :style => "font-family: Arial, sans-serif; color: #028cf0; font-size: 24px; font-weight: bold;" %></h1>
                   </td>
                 </tr>
                 <% if @post.photo %>
@@ -74,7 +74,7 @@
                       <p style="font-family: Arial, sans-serif; font-size: 12px; line-height: 18px; margin: 0 0 20px">Are
                         you going to take that?</p>
 
-                      <p><%= link_to "Smack " + @smacker.first_name + " Back!", college_smacks_url(@smacker.college) %></a></p>
+                        <p><%= link_to "Smack " + @smacker.first_name + " Back!", college_smacks_url(@smacker.college), :style => "font-family: Arial, sans-serif; color: #028cf0; font-size: 12px; font-weight: bold;" %></a></p>
                     </td>
                   </tr>
                 </table>
