--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -58,7 +58,7 @@
                   <%= text_field_tag :search, params[:search], :class => 'search_input'%>
                   <%= submit_tag "Filter", :name => nil, :class => 'table_button fakebtn' %>
               </li>
-              <li><%= link_to "Clear", "", :name => nil, :class => 'table_button fakebtn clear_contacts' %></li>
+              <li><%= link_to "Show All", "", :name => nil, :class => 'table_button fakebtn clear_contacts' %></li>
             </ul>
            <% end %>
           </div>
