--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -82,6 +82,12 @@
               <td class="description"><%= f.label :title, 'Title:' %></td>
               <td class="entry"><%= f.text_field :title %></td>
             </tr>
+            <% if can? :manage, Post %>
+              <tr>
+                <td class="description"><%= f.label :on_frontpage_week, 'Smack of the Week on the week:' %></td>
+                <td class="entry"><%= f.select(:on_frontpage_week, (Date.today.cweek..52).to_a, {:include_blank => true}) %></td>
+              </tr>
+            <% end %>
           </table>
           <table id="shifting_fields" cellpadding="0" cellspacing="0">
             <%= f.fields_for :video, Video.new do |vf| %>
