--- a/app/views/welcome/_sotw.html.erb
+++ b/app/views/welcome/_sotw.html.erb
@@ -30,6 +30,7 @@
       </div>
       <div class="content_share">
         <%= share_icons(@sotw, :post) %>
+        <div class="voting_icons"><%= voting_icons(@sotw) %></div>
       </div>
     </div>
   </div>
