--- a/app/views/posts/_news_preview.html.erb
+++ b/app/views/posts/_news_preview.html.erb
@@ -4,10 +4,5 @@
   </div>
   <%= link_to "Article Preview", post.news_post.url, :class => 'snap_shots' %>
   <%= share_icons(post, :preview) %>
-  <div class="votes">
-    <%= link_to(image_tag('like.png'), vote_up_post_path(post), :method => :post, :remote => true, :class => "vote-up") if can? :create, Vote %>
-    <b id="vote_count_up<%= post.id %>"><%= post.up_votes %></b>
-    <%= link_to(image_tag('dislike.png'), vote_down_post_path(post), :method => :post, :remote => true, :class => "vote-down") if can? :create, Vote %>
-    <b id="vote_count_down<%= post.id %>"><%= post.down_votes %></b>
-  </div>
+  <div class="voting_icons"><%= voting_icons(post) %></div>
 </li>
